--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/.gitignore
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
