--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ target/
 
 ### IntelliJ IDEA ###
 .idea/.gitignore
+.idea/misc.xml
+.idea/vcs.xml
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
